API Server: Added APIs for templates
